--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@arco-design/web-vue": "^2.47.0",
     "@tauri-apps/api": "^1.3.0",
+    "dayjs": "^1.11.8",
     "sass": "^1.62.1",
     "vue": "^3.2.45"
   },
