--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tauri-apps/api": "^1.3.0",
     "dayjs": "^1.11.8",
     "sass": "^1.62.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1",
