--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tickets",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,11 +17,13 @@
     "sass": "^1.62.1",
     "vue": "^3.2.45",
     "vue-router": "4",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "tauri-plugin-sql-api": "https://github.com/tauri-apps/tauri-plugin-sql#v1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "unplugin-auto-import": "^0.16.4",
     "vite": "^4.2.1"
   }
 }
