--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,11 +13,17 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["dialog-all", "shell-open", "window-all"] }
+tauri = { version = "1.3", features = ["api-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json", "multipart"] }
+reqwest = { version = "0.11", features = ["json", "multipart", "socks"] }
 tokio = { version = "1", features = ["full"] }
+regex = "1.8.4"
+
+[dependencies.tauri-plugin-sql]
+git = "https://github.com/tauri-apps/plugins-workspace"
+branch = "v1"
+features = ["sqlite"]
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
