--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vue": "^3.2.45",
     "vue-router": "4",
     "vuex": "^4.0.2",
-    "tauri-plugin-sql-api": "https://github.com/tauri-apps/tauri-plugin-sql#v1"
+    "tauri-plugin-sql-api": "https://github.com/tauri-apps/tauri-plugin-sql"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1",
